Receiver selection logic (WIP), fix SignAPI shading. Add more utility methods to the Position class. Improve UserRepository